# calibr8

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  app.cmake  capp.cmake  genindex.html  index.html  install.sh  install.txt  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/compilation/: compilation.doctree
.doctrees/theory/: theory.doctree
.doctrees/usage/: forward.doctree  usage.doctree
.github/workflows/: doc.yml
_sources/: index.rst.txt
_sources/theory/: theory.rst.txt
_sources/usage/: forward.rst.txt  usage.rst.txt
cmake/: dependencies.cmake
compilation/: compilation.html
doc/: Doxyfile.in  conf.py  index.rst
doc/compilation/: compilation.rst
doc/doxygen/: Doxyfile.in
doc/usage/: forward.rst  usage.rst
env/: cee-shared.sh  cee-static.sh  linux-shared.sh  osx-shared.sh  osx-static.sh  osx.sh  toss3-static.sh
examples/: python_inverse.py
flavor/cee-shared/: flavor.cmake
flavor/cee-static/: flavor.cmake
flavor/linux-shared/: flavor.cmake
flavor/osx/: flavor.cmake
flavor/osx-shared/: flavor.cmake
flavor/osx-static/: flavor.cmake
flavor/toss3-static/: flavor.cmake
package/calibr8/: package.cmake
package/eigen/: package.cmake
package/gmodel/: package.cmake
package/gtest/: package.cmake
package/hdf5/: package.cmake
package/netcdf-c/: package.cmake
package/omega_h/: package.cmake
package/parmetis/: package.cmake
package/scorec/: package.cmake
research/: CMakeLists.txt  adapt.cpp  adapt.hpp  bcs.cpp  bcs.hpp  control.hpp  defines.hpp  disc.cpp  disc.hpp  elastic.hpp  error.cpp  error.hpp  error_R_dot_zh.cpp  error_R_dot_zh.hpp  error_R_dot_zh_minus_zh_H.cpp  error_R_dot_zh_minus_zh_H.hpp  error_adjoint.cpp  error_adjoint.hpp  linalg.cpp  linalg.hpp  nlelasticity.hpp  nlpoisson.cpp  nlpoisson.hpp  physics.cpp  physics.hpp  point_val.hpp  qoi.cpp  qoi.hpp  qoi1.hpp  qoi2.hpp  qoi3.hpp  qoi_point.hpp  qoi_sqrt_gradient.hpp  qoi_value.hpp  qoi_vm.hpp  research.cpp  residual.cpp  residual.hpp  sol_avg.hpp  sol_avg_sub.hpp  (+8 more)
source/: CMakeLists.txt  install.txt
source/calibr8/doc/doxygen/: CMakeLists.txt
source/calibr8/python/: README.md  environment.yml  install.txt  pyproject.toml  setup.py
source/calibr8/python/calibr8/: __init__.py
source/calibr8/python/calibr8/remap/: gmls.py
source/calibr8/python/calibr8/script/: load_optimization_history.py
source/calibr8/python/calibr8/util/: adaptive_lbfgsb.py  driver_support.py  input_file_io.py  parameter_transforms.py
source/calibr8/python/scripts/: load_optimization_history.py
source/calibr8/src/: CMakeLists.txt  ICNN.cpp  ICNN.hpp  NN.cpp  NN_old.cpp  add_node_set_fields.cpp  adjoint.cpp  adjoint.hpp  adjoint_objective.cpp  adjoint_objective.hpp  adjoint_sens_vfm_objective.cpp  adjoint_sens_vfm_objective.hpp  avg_disp.cpp  avg_local_var.cpp  avg_local_var.hpp  calibration.cpp  calibration.hpp  control.cpp  defines.hpp  disc.cpp  disc.hpp  elastic.cpp  equilibrium_gap.cpp  equilibrium_gap.hpp  evaluations.cpp  evaluations.hpp  fd_vfm_objective.cpp  femu_objective.cpp  forward_sens_vfm_objective.cpp  global_residual.cpp  global_residual.hpp  hybrid_hyper_J2_plane_stress.cpp  hybrid_hyper_J2_plane_stress.hpp  hyper_J2.cpp  hyper_J2_plane_strain.cpp  hyper_J2_plane_stress.cpp  hypo_barlat.cpp  hypo_barlat.hpp  hypo_hill.cpp  hypo_hill.hpp  (+67 more)
source/calibr8/test/: 2prob.yaml  CMakeLists.txt  vectorize.cpp
source/calibr8/test/adjoint/: 2prob.yaml.in  notch2D_small_J2_adjoint_check.yaml.in
source/calibr8/test/error/: notch_hyper_J2_error.yaml.in
source/calibr8/test/femu/: CMakeLists.txt  notch_hyper_J2_FEMU.yaml.in  notch_hyper_J2_synthetic.yaml.in
source/calibr8/test/mesh/cube/: Makefile  cube_2p1.smb
source/calibr8/test/mesh/notch/: J2_qoi.yaml  Makefile  notch0.smb
source/calibr8/test/mesh/notch2D/: notch2D.txt  notch2D0.smb  notch2D_2p0.smb
source/calibr8/test/primal/: CMakeLists.txt  cube_elastic.yaml.in  cube_hyper_J2.yaml.in  cube_hyperelasticity.yaml.in  cube_hyperelasticity_traction.yaml.in  notch2D_hyper_J2_plane_strain.yaml.in  notch2D_hyper_J2_plane_stress.yaml.in  notch2D_hypo_J2_plane_strain.yaml.in  notch2D_hypo_J2_plane_stress.yaml.in  notch2D_small_J2.yaml.in  notch2D_small_J2_plane_strain.yaml.in  notch2D_small_J2_plane_stress.yaml.in  notch_hyper_J2.yaml.in  notch_hypo_J2.yaml.in  notch_hypo_barlat.yaml.in  notch_small_J2.yaml.in  notch_small_hosford.yaml.in
source/calibr8/test/python/: CMakeLists.txt  check_recovered_params.py  notch2D_small_J2_FEMU.yaml.in  notch2D_small_J2_FEMU_synthetic.yaml.in
source/calibr8/test/python/unit/: test_deck_parsing.py  test_failure_handling.py  test_parameter_transforms.py
source/calibr8/test/unit/: CMakeLists.txt  control.cpp  icnn.cpp  unit_tests.cpp
source/calibr8/test/verify/: notch_hyper_J2_model_form_error_verify.yaml.in  notch_hyper_J2_verify.yaml.in  notch_isotropic_elastic_model_form_error_verify.yaml.in
source/calibr8/test/vfm/: CMakeLists.txt  notch2D_small_J2_plane_stress.yaml.in  vfm_adjoint_sens_notch2D_small_J2_plane_stress.yaml.in  vfm_forward_sens_notch2D_small_J2_plane_stress.yaml.in
src/: CMakeLists.txt  Hill.cpp  Hill.hpp  Hill_plane_strain.cpp  Hill_plane_strain.hpp  Hill_plane_stress.cpp  Hill_plane_stress.hpp  J2.cpp  J2.hpp  J2_hypo_plane_strain.cpp  J2_hypo_plane_strain.hpp  J2_hypo_plane_stress.cpp  J2_hypo_plane_stress.hpp  J2_plane_strain.cpp  J2_plane_strain.hpp  J2_plane_stress.cpp  J2_plane_stress.hpp  J2_small_strain.cpp  J2_small_strain.hpp  NN.cpp  NN.hpp  NN2.cpp  NN2.hpp  NN_old.cpp  adjoint.cpp  adjoint.hpp  adjoint_aux.cpp  adjoint_aux.hpp  adjoint_objective.cpp  adjoint_objective.hpp  arrays.hpp  avg_disp.cpp  avg_disp.hpp  avg_disp_subdomain.cpp  avg_disp_subdomain.hpp  avg_element_stress.cpp  avg_element_stress.hpp  avg_stress.cpp  calibration.cpp  calibration.hpp  (+129 more)
test/: 2prob.yaml  CMakeLists.txt  vectorize.cpp
test/unit/: CMakeLists.txt  control.cpp  disc.cpp.in  global_residual.cpp  nn.cpp  quadrature.cpp.in  unit.yaml.in  unit_tests.cpp
theory/: theory.html
usage/: forward.html  usage.html
(+118 files in other folders)
